<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toStartOf="@id/sign_out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_message"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_message" />

    <EditText
        android:id="@+id/tweet_url_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_tweet_url_hint"
        android:importantForAutofill="no"
        android:inputType="textUri|textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/from_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@id/tweet_url_form"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/spreadsheet_url_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_spreadsheet_url_hint"
        android:importantForAutofill="no"
        android:inputType="textUri|textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/to_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/backup"
        app:layout_constraintTop_toBottomOf="@id/spreadsheet_url_form"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/ui_for_signed_in_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="sign_out_button,from_label,tweet_url_form,to_label,spreadsheet_url_form,backup_button"
        tools:visibility="visible" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
